# AlphaGL

./: .gitignore  CMakeLists.txt  README.md  mamafile.py
AGL/: AGL.natvis  AGLConfig.h  Actor.cpp  Actor.h  Bitmap.cpp  Bitmap.h  Camera.cpp  Camera.h  DefaultShaders.cpp  DefaultShaders.h  FrameBuffer.cpp  FrameBuffer.h  GLContext_Linux.cpp  GLContext_Linux.h  GLContext_Win32.cpp  GLContext_Win32.h  GLCore.cpp  GLCore.h  GLDraw.cpp  GLDraw.h  GLInput.cpp  GLInput.h  OpenGL.cpp  OpenGL.h  SceneNode.cpp  SceneNode.h  SceneRoot.cpp  SceneRoot.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Texture_bmp.cpp  Texture_jpg.cpp  Texture_png.cpp  glew.h
mama/: glfw.py  libjpeg.py  libpng.py  zlib.py
tests/: test_basic_scene.cpp
